--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -36,7 +36,7 @@ jobs:
               { name: 'alpha', prerelease: true },
             ]
           dry-run: true
-          repository-url: https://github.com/codfish/semantic-release-action.git
+          repository-url: https://github.com/HenrikPoulsen/semantic-release-plus-action.git
           extends: '@semantic-release/apm-config'
           tag-format: 'ver${version}'
           additional-packages: |
@@ -66,12 +66,12 @@ jobs:
 
       - name: docker login
         run: |
-          echo "$GCR_TOKEN" | docker login ghcr.io -u codfish --password-stdin
+          echo "$GCR_TOKEN" | docker login ghcr.io -u HenrikPoulsen --password-stdin
         env:
           GCR_TOKEN: ${{ secrets.GCR_TOKEN }}
 
       # Dockerhub is auto synced with the repo, no need to explicitly deploy
       - name: build and push branch docker image to GCR
         run: |
-          docker build -t ghcr.io/codfish/semantic-release-action:$GITHUB_HEAD_REF .
-          docker push ghcr.io/codfish/semantic-release-action:$GITHUB_HEAD_REF
+          docker build -t ghcr.io/HenrikPoulsen/semantic-release-plus-action:$GITHUB_HEAD_REF .
+          docker push ghcr.io/HenrikPoulsen/semantic-release-plus-action:$GITHUB_HEAD_REF
