--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "semantic-release-action",
+  "name": "semantic-release-plus-action",
   "version": "0.0.0-semantically-released",
-  "description": "GitHub action runs `semantic-release`. Respects .releaserc.js in your repo. Exports version variables for you to use in subsequent actions.",
-  "homepage": "https://github.com/codfish/semantic-release-action",
+  "description": "GitHub action runs `semantic-release-plus`. Respects .releaserc.js in your repo. Exports version variables for you to use in subsequent actions.",
+  "homepage": "https://github.com/HenrikPoulsen/semantic-release-plus-action",
   "author": {
-    "name": "Chris O'Donnell",
-    "email": "dev@codfish.io",
-    "url": "https://codfish.io"
+    "name": "Henrik Poulsen",
+    "email": "henrik.f.poulsen@gmail.com",
+    "url": "https://github.com/henrikpoulsen"
   },
   "type": "module",
   "main": "entrypoint.js",
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/codfish/semantic-release-action.git"
+    "url": "https://github.com/henrikpoulsen/semantic-release-plus-action.git"
   },
   "scripts": {
     "format": "cod-scripts format",
