--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,22 @@
 name: Release
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   release:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - uses: actions/checkout@v4
@@ -54,25 +63,26 @@ jobs:
         env:
           SEMANTIC_OUTPUTS: ${{ toJson(steps.semantic-dry-run.outputs) }}
 
-      - name: docker login
-        run: |
-          echo "$GCR_TOKEN" | docker login ghcr.io -u codfish --password-stdin
-        env:
-          GCR_TOKEN: ${{ secrets.GCR_TOKEN }}
+      - name: Log in to the Container registry
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       # Dockerhub is auto synced with the repo, no need to explicitly deploy
       - name: build and push latest docker image to GCR
         run: |
-          docker build -t ghcr.io/codfish/semantic-release-action:latest .
-          docker push ghcr.io/codfish/semantic-release-action:latest
+          docker build -t ghcr.io/henrikpoulsen/semantic-release-plus-action:latest .
+          docker push ghcr.io/henrikpoulsen/semantic-release-plus-action:latest
 
       - name: push docker images for releases to GCR
         if: steps.semantic.outputs.new-release-published == 'true'
         run: |
-          docker tag ghcr.io/codfish/semantic-release-action ghcr.io/codfish/semantic-release-action:$VERSION_TAG
-          docker tag ghcr.io/codfish/semantic-release-action ghcr.io/codfish/semantic-release-action:$MAJOR_TAG
-          docker push ghcr.io/codfish/semantic-release-action:$VERSION_TAG
-          docker push ghcr.io/codfish/semantic-release-action:$MAJOR_TAG
+          docker tag ghcr.io/henrikpoulsen/semantic-release-plus-action ghcr.io/henrikpoulsen/semantic-release-plus-action:$VERSION_TAG
+          docker tag ghcr.io/henrikpoulsen/semantic-release-plus-action ghcr.io/henrikpoulsen/semantic-release-plus-action:$MAJOR_TAG
+          docker push ghcr.io/henrikpoulsen/semantic-release-plus-action:$VERSION_TAG
+          docker push ghcr.io/henrikpoulsen/semantic-release-plus-action:$MAJOR_TAG
         env:
           VERSION_TAG: v${{ steps.semantic.outputs.release-version }}
           MAJOR_TAG: v${{ steps.semantic.outputs.release-major }}
