--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,10 +1,20 @@
 name: Validate
 
-on: pull_request
+on:
+  workflow_dispatch:
+  pull_request:
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   validate:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - uses: actions/checkout@v4
@@ -36,7 +46,7 @@ jobs:
               { name: 'alpha', prerelease: true },
             ]
           dry-run: true
-          repository-url: https://github.com/codfish/semantic-release-action.git
+          repository-url: https://github.com/HenrikPoulsen/semantic-release-plus-action.git
           extends: '@semantic-release/apm-config'
           tag-format: 'ver${version}'
           additional-packages: |
@@ -64,14 +74,15 @@ jobs:
         env:
           OUTPUTS: ${{ toJson(steps.semantic.outputs) }}
 
-      - name: docker login
-        run: |
-          echo "$GCR_TOKEN" | docker login ghcr.io -u codfish --password-stdin
-        env:
-          GCR_TOKEN: ${{ secrets.GCR_TOKEN }}
+      - name: Log in to the Container registry
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       # Dockerhub is auto synced with the repo, no need to explicitly deploy
       - name: build and push branch docker image to GCR
         run: |
-          docker build -t ghcr.io/codfish/semantic-release-action:$GITHUB_HEAD_REF .
-          docker push ghcr.io/codfish/semantic-release-action:$GITHUB_HEAD_REF
+          docker build -t ghcr.io/henrikpoulsen/semantic-release-plus-action:$GITHUB_HEAD_REF .
+          docker push ghcr.io/henrikpoulsen/semantic-release-plus-action:$GITHUB_HEAD_REF
