--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,14 +14,10 @@ jobs:
   release:
     runs-on: ubuntu-latest
 
-    permissions:
-      contents: read
-      packages: write
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: semantic-release
+      - name: semantic-release-plus
         id: semantic
         uses: ./
         with:
